// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media Player: AMP Entry renders a landscape container with an amp-iframe and nested amp-img 1`] = `
.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

@media (min-width:63rem) {
  .c0 {
    margin-bottom: 2rem;
  }
}

<html>
  <head>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    <div>
      <div
        class="c0"
      >
        <amp-iframe
          allowfullscreen="allowfullscreen"
          frameborder="0"
          layout="fill"
          sandbox="allow-scripts allow-same-origin"
          scrolling="no"
          src="http://foo.bar/iframe/amp"
          title="Media player"
        >
          <amp-img
            alt=""
            attribution=""
            height="16"
            layout="fill"
            placeholder="true"
            src="http://foo.bar/placeholder.png"
            width="9"
          />
          <noscript />
        </amp-iframe>
      </div>
    </div>
  </body>
</html>
`;

exports[`Media Player: AMP Entry renders a portrait container with amp-iframe and nested amp-img 1`] = `
<html>
  <head>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    .c0 {
  padding-top: 177.78%;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

@media (min-width:63rem) {
  .c0 {
    margin-bottom: 2rem;
  }
}

<div>
      <div
        class="c0"
      >
        <amp-iframe
          allowfullscreen="allowfullscreen"
          frameborder="0"
          layout="fill"
          sandbox="allow-scripts allow-same-origin"
          scrolling="no"
          src="http://foo.bar/iframe/amp"
          title="Media player"
        >
          <amp-img
            alt=""
            attribution=""
            height="9"
            layout="fill"
            placeholder="true"
            src="http://foo.bar/placeholder.png"
            width="16"
          />
          <noscript />
        </amp-iframe>
      </div>
    </div>
  </body>
</html>
`;

exports[`Media Player: AMP Entry renders the audio skin 1`] = `
<html>
  <head>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    .c0 {
  height: 165px;
  position: relative;
  margin-bottom: 1rem;
}

@media (min-width:63rem) {
  .c0 {
    margin-bottom: 2rem;
  }
}

<div>
      <div
        class="c0"
      >
        <amp-iframe
          allowfullscreen="allowfullscreen"
          frameborder="0"
          layout="fill"
          sandbox="allow-scripts allow-same-origin"
          scrolling="no"
          src="https://www.test.bbc.com/ws/av-embeds/media/bbc_korean_radio/liveradio"
          title="Audio player"
        >
          <amp-img
            alt=""
            attribution=""
            height="16"
            layout="fill"
            placeholder="true"
            src="http://foo.bar/placeholder.png"
            width="9"
          />
          <noscript />
        </amp-iframe>
      </div>
    </div>
  </body>
</html>
`;

exports[`Media Player: Canonical Entry renders a landscape container with a placeholder image 1`] = `
.c11 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c9 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c7 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c5 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c5:hover,
.c5:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c8 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.c10 {
  display: block;
  margin-top: 0.5rem;
}

.c3 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
}

.c4 {
  position: absolute;
  bottom: 0;
  display: none;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c6 {
  position: absolute;
  bottom: 0;
}

.c1:hover .c6,
.c1:focus .c6 {
  background-color: #B80000;
}

.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 0.875rem;
  }
}

@media (min-width:63rem) {
  .c0 {
    margin-bottom: 2rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <div
      class="c3"
    >
      <noscript
        class="c4"
      />
    </div>
    <button
      class="c5 c6"
    >
      <span
        class="c7"
      >
        Play video, "Dog chases cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="c8"
      >
        <svg
          aria-hidden="true"
          class="c9"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="c10"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <img
      alt=""
      class="c11"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Canonical Entry renders a placeholder image with guidance 1`] = `
.c12 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c10 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c8 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c6 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c6:hover,
.c6:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c9 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.c11 {
  display: block;
  margin-top: 0.5rem;
}

.c3 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34,34,34,0.75);
}

.c4 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
}

.c5 {
  position: absolute;
  bottom: 0;
  display: none;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c7 {
  position: absolute;
  bottom: 0;
}

.c1:hover .c7,
.c1:focus .c7 {
  background-color: #B80000;
}

.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c3 {
    background-color: transparent;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c4 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .c4 {
    padding: 1rem;
  }
}

@media (min-width:63rem) {
  .c0 {
    margin-bottom: 2rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <div
      class="c3"
    >
      <strong
        aria-hidden="true"
        class="c4 guidance-message"
      >
        May contain strong language, sexual or violent content that may offend.
      </strong>
      <noscript
        class="c5"
      />
    </div>
    <button
      class="c6 c7"
    >
      <span
        class="c8"
      >
        May contain strong language, sexual or violent content that may offend. Play video, "Dog chases cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="c9"
      >
        <svg
          aria-hidden="true"
          class="c10"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="c11"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <img
      alt=""
      class="c12"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Canonical Entry renders a portrait container with a placeholder image 1`] = `
.c11 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c9 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c7 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c5 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c5:hover,
.c5:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c8 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.c10 {
  display: block;
  margin-top: 0.5rem;
}

.c3 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
}

.c4 {
  position: absolute;
  bottom: 0;
  display: none;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c6 {
  position: absolute;
  bottom: 0;
}

.c1:hover .c6,
.c1:focus .c6 {
  background-color: #B80000;
}

.c0 {
  padding-top: 177.78%;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 0.875rem;
  }
}

@media (min-width:63rem) {
  .c0 {
    margin-bottom: 2rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <div
      class="c3"
    >
      <noscript
        class="c4"
      />
    </div>
    <button
      class="c5 c6"
    >
      <span
        class="c7"
      >
        Play video, "Dog chases cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="c8"
      >
        <svg
          aria-hidden="true"
          class="c9"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="c10"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <img
      alt=""
      class="c11"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;

exports[`Media Player: Canonical Entry renders an iframe when showPlaceholder is false 1`] = `
.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

.c1 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

@media (min-width:63rem) {
  .c0 {
    margin-bottom: 2rem;
  }
}

<div
  class="c0"
>
  <iframe
    allow="autoplay; fullscreen"
    allowfullscreen=""
    class="c1"
    scrolling="no"
    src="http://foo.bar/iframe"
    title="Media player"
  />
  <noscript />
</div>
`;

exports[`Media Player: Canonical Entry renders the audio skin 1`] = `
.c0 {
  height: 165px;
  position: relative;
  margin-bottom: 1rem;
}

.c1 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

@media (min-width:63rem) {
  .c0 {
    margin-bottom: 2rem;
  }
}

<div
  class="c0"
>
  <iframe
    allow="autoplay; fullscreen"
    allowfullscreen=""
    class="c1"
    scrolling="no"
    src="https://www.test.bbc.com/ws/av-embeds/media/bbc_korean_radio/liveradio"
    title="Audio player"
  />
  <noscript />
</div>
`;

exports[`Media Player: Canonical Entry renders with no-js styles when noJsClassName prop is used 1`] = `
.c12 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c10 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c8 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c6 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c6:hover,
.c6:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c9 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.c11 {
  display: block;
  margin-top: 0.5rem;
}

.c3 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34,34,34,0.75);
}

.no-js .c3 {
  background-color: rgba(34,34,34,0.75);
}

.no-js .c3 .guidance-message {
  display: none;
}

.c4 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
}

.c5 {
  position: absolute;
  bottom: 0;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: default;
}

.c1:hover .c13,
.c1:focus .c13 {
  background-color: #B80000;
}

.c7 {
  position: absolute;
  bottom: 0;
}

.no-js .c7 {
  display: none;
}

.c1:hover .c7,
.c1:focus .c7 {
  background-color: #B80000;
}

.c0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
  margin-bottom: 1rem;
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c3 {
    background-color: transparent;
  }
}

@media screen and (-ms-high-contrast:active) {
  .no-js .c3 {
    background-color: transparent;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c4 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .c4 {
    padding: 1rem;
  }
}

@media (min-width:63rem) {
  .c0 {
    margin-bottom: 2rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <div
      class="c3"
    >
      <strong
        aria-hidden="true"
        class="c4 guidance-message"
      >
        May contain strong language, sexual or violent content that may offend.
      </strong>
      <noscript
        class="c5"
      />
    </div>
    <button
      class="c6 c7"
    >
      <span
        class="c8"
      >
        May contain strong language, sexual or violent content that may offend. Play video, "Dog chases cat.", 2 minutes 30 seconds
      </span>
      <div
        aria-hidden="true"
        class="c9"
      >
        <svg
          aria-hidden="true"
          class="c10"
          focusable="false"
          height="12px"
          viewBox="0 0 32 32"
          width="12px"
        >
          <polygon
            points="3,32 29,16 3,0"
          />
        </svg>
      </div>
      <time
        aria-hidden="true"
        class="c11"
        datetime="PT2M30S"
      >
        2:30
      </time>
    </button>
    <img
      alt=""
      class="c12"
      src="http://foo.bar/placeholder.png"
    />
  </div>
</div>
`;
